# Studying

./: .gitignore  README.md  basic.py  classes.lisp  contours.py  defaultFunctions.lisp  draw.py  fastTestingStuffs.go  functions.lisp  goodToKnow.txt  gradients.py  histogram.py  index.html  lists.lisp  macros.lisp  masking.py  package-lock.json  read.py  readme.md  requirements.txt  rescale.py  smoothing.py  spaces.py  splitmerge.py  thresh.py  transformations.py  tricouri.php
Biblioteca/: Angajati.Designer.cs  App.config  Pontaj.Designer.cs  proceduraInitLuna.sql
CommonLisp/: basicMath.lisp  conditionals.lisp  equality.lisp  extras.lisp  formatting.lisp  loops.lisp  readWriteConsole.lisp
Cypress in a nutshell/: cypress.config.js
Exemplu_baze_de_date/: Exemplu_baze_de_date.sln  bazadedateDataSet.cs
LinuxDeviceDriver/: Makefile  ldd.c  readme.md  user-app.py
MoshTutorial/: MoshTutorial.sln  MoshTutorial.vcxproj
Plinko/: Boundary.js  Particle.js  Plinko.js  index.html  sketch.js
Processing3/: README.md
R/: introduction.r  packages.r  plot.r
Random cypress tests/: README.md
Room/: Chain.js  car.js  sketch.js
Shaders/: ShrinkingCircles.glsl  crazyCircles.glsl
Uipath/: .gitignore  README.md
autovehicleManagement_IMGUI/: flota_auto.h  imgui_study.filters  imgui_study.sln  imgui_study.vcxproj.filters
basic stuff/: basic.py  bitwise.py  contours.py  gradients.py  masking.py  smoothing.py  spaces.py  thresh.py
booking-app/: helper.go  main.go
cmake_project_in_vs/: CMakeLists.txt  cmake_project_in_vs.cpp  cmake_project_in_vs.h  vcpkg.json
(+999 files in other folders)
